2005-03-11  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimpstrokedesc.h
	* app/core/gimpstrokedesc.c (gimp_stroke_desc_duplicate):
	New function, will be needed for shape layers.
	
2005-03-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/deinterlace.c
	* plug-ins/common/despeckle.c
	* plug-ins/common/laplace.c
	* plug-ins/common/neon.c
	* plug-ins/common/sobel.c
	* plug-ins/common/dog.c: update progress less frequently.

2005-03-11  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/despeckle.c: minor cleanup, inline
	pixel_intensity() and pixel_copy().

2005-03-10  Manish Singh  <yosh@gimp.org>

	* plug-ins/uri/url-backend-wget.c: force the server-response wget
	option off so it doesn't screw up our parsing.

2005-03-10  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimprectangletool.c: lots of code for dealing
	with constraints.  Almost functional now ...
	
2005-03-10  Sven Neumann  <sven@gimp.org>

	* app/composite/gimp-composite-altivec.c: delete trailing whitespace.

2005-03-09  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimptexttool.c (gimp_text_tool_create_vectors_warped):
	make created path visible and active.
	
2005-03-09  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpfu.py: initialize button variable before using
	it in PF_BUTTON code. Fixes bug #169793. Thanks to Joao S. O. Bueno
	Calligaris.

2005-03-10  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpsizeentry.c (gimp_size_entry_show_unit_menu):
	added "Since: GIMP 2.4" to the docs.

	* libgimpwidgets/gimpwidgets.def: added the new symbol.

2005-03-09  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* libgimpwidgets/gimpsizeentry.[ch]: added function
	gimp_size_entry_show_unit_menu() for convenience.

	* app/tools/gimprectangleoptions.[ch]
	* app/tools/gimprectangletool.[ch]:  more work on 
	controls in Tool Options.  Can now resize rectangle 
	by dragging any corner or edge -- move rectangle by
	clicking inside and dragging.
