@@ -1,3 +1,10 @@
+2005-03-11  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/despeckle.c: test intensity against white and
+	black level, not only the red channel. Improved border behavior.
+	Iterate over the pixels row-by-row, instead of jumping through the
+	data column-wise.
+
 2005-03-11  Bill Skaggs  <weskaggs@primate.ucdavis.edu>
 
 	* app/core/gimpstrokedesc.h
